# fathom

./: .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  README-plugin.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
commands/: plan.md  report.md  run.md  smoke.md
docs/: README.md  STATUS.md
ledger/: ablation-v1.jsonl  ablation-v2.jsonl  context-size-v1.jsonl  dc-consumers-v1.jsonl  dc-granularity-v1.jsonl  dc-stack-v1.jsonl  e1-data.jsonl  e1-debug.jsonl  e1-verif.jsonl  humble-vs-super-v1.jsonl  humble-vs-super-v2.jsonl  humble-vs-super-v3.jsonl  humble-vs-super-v4.jsonl  inject-content-v1.jsonl  model-tier-effort.jsonl  model-tier-v1.jsonl  skill-pyeng-v1.jsonl  tu-grounding-e2e-v1.jsonl  tu-grounding-v1.jsonl
ledger-rg2x2/: e1-data.jsonl  e1-debug.jsonl  e1-verif.jsonl
mcp/: README.md  _resolve.py  fathom_server.py  test_server_schema.py
scenarios/: bare.toml  series.toml  single-long-session.toml
scripts-rg2x2/: activation_report.py  e2a_detectors.py
streams-rg2x2/: e1-data--rg2x2-data-both-haiku--expense-rollup--r0--a1--1784856637573.ndjson  e1-data--rg2x2-data-both-haiku--expense-rollup--r1--a1--1784858231323.ndjson  e1-data--rg2x2-data-both-haiku--order-merge--r0--a1--1784856681095.ndjson  e1-data--rg2x2-data-both-haiku--order-merge--r1--a1--1784858266080.ndjson  e1-data--rg2x2-data-both-sonnet--expense-rollup--r0--a1--1784856734712.ndjson  e1-data--rg2x2-data-both-sonnet--expense-rollup--r1--a1--1784858295374.ndjson  e1-data--rg2x2-data-both-sonnet--order-merge--r0--a1--1784856764417.ndjson  (+89 more)
tests/: test_cli.py  (+24 more)
(+981 files in other folders)
