[project]
name = "fathom"
version = "0.1.0"
description = "Scenario-blind tool-effectiveness evals"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
fathom = "fathom.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["ruff", "pytest"]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [
    "tasks/*/plugins",
]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
