[project]
name = "fathom"
version = "0.1.0"
description = "Scenario-blind tool-effectiveness evals"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
fathom = "fathom.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["ruff", "pytest"]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [
    # Vendored/mounted plugin trees are byte-preserved fixtures, not source:
    # reformatting them would mutate the plugin-under-test. Every vendoring
    # location must be listed here or CI re-breaks (3rd occurrence).
    "tasks/*/plugins",
    "scenarios/*/assets",
    "scenarios/*-assets",
]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
